loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: Missing closing brace `}' assumed here
for (i <- 0 to 6) {if (!estSurBiscuit()) {avance()
^LoopFor:1: error: Missing closing brace `}' assumed here
for (i <- 0 to 6) {if (!estSurBiscuit()) {avance()
^LoopFor:1: error: expected class or object definition
for (i <- 0 to 6) {if (!estSurBiscuit()) {avance()
^